Bugfix, footer on login/signup had too much padding -> scrollbar added even if it's not nessecary with scrollbar

--- a/public/less/branding/footer.less
+++ b/public/less/branding/footer.less
@@ -13,7 +13,8 @@ footer.site {
     xbackground:#6cf;
   }
   font-size : 16px;
-  padding: 60px 0 90px;
+  padding-top: 78px;
+  padding-bottom: 49px;
   background: #495259;
   position: relative;
   z-index: 90;
